--- a/style.css
+++ b/style.css
@@ -1,10 +1,45 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+
 .board{
-    background-color: green;
-    width: 1200px;
-    height: 1200px;
+    width: 80%;
+    height: 80%;
+    bottom: 7%;
+    left: 10%;
+    position: absolute;
     display: grid;
     grid-gap: 2% 2%;
     grid-template-columns: 20% 20% 20% 20%;
     align-items: center;
     justify-content: center;
+}
+
+.container{
+    width: 2400px;
+    height: 2400px;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url('images/background.png');
+}
+.text{
+    font-family: 'Quicksand';
+    font-size: 200px;
+    font-weight: bolder;
+    color: aliceblue;
+    background-color: rgba(0,0,0,0.5);
+    border-radius: 30px;
+}
+
+.frontCard{
+    position: absolute;
+    width: 90%;
+    height: 90%;
+    border-radius: 20px;
+    backface-visibility: hidden;
+    background-image: url('images/happy.png');
+    background-color: #ffc728;
+    background-size: 100% 100%;
+    border: 15px solid white;
 }
