--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 .board{
     width: 80%;
     height: 80%;
-    bottom: 7%;
+    bottom: 5%;
     left: 10%;
     position: absolute;
     display: grid;
@@ -22,15 +22,20 @@
     position: relative;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url('images/fruits.png');
+    background-image: url('images/watercolor.png');
 }
 .text{
     font-family: 'Quicksand';
-    font-size: 200px;
+    font-size: 150px;
     font-weight: bolder;
     color: aliceblue;
     background-color: rgba(0,0,0,0.5);
     border-radius: 30px;
+    width: fit-content;
+    padding: 25px;
+    position: relative;
+    top: 2%;
+    left: 25%;
 }
 
 .frontCard{
@@ -44,9 +49,15 @@
     background-size: 100% 100%;
     border: 15px solid white;
 }
-.endText{
+.endText {
+    background-color: rgba(0,0,0,0.5);
+    border-radius: 30px;
+    width: fit-content;
+    padding: 50px;
+    position: absolute;
+    top: 40%;
+    left: 5%;
     font-family: 'Fredericka the Great', cursive;
-    font-size: 100px;
-    font-weight: bolder;
+    font-size: 200px;
     color: aliceblue;
 }
